# sdl-texture

./: CMakeLists.txt  README.md  app.c  app.h
NullEngine/: CMakeLists.txt
NullEngine/include/: alloc.h  app.h  error.h  game_object.h  render.h
NullEngine/src/: app.c  error.c  event.c  game_object.c  render.c
SandboxGame/: CMakeLists.txt
SandboxGame/res/: CMakeLists.txt
SandboxGame/src/: main.c
include/: app.h  error.h  event.h  game_object.h
src/: alloc.c  app.c  error.c  event.c  game_object.c  main.c
